--- a/assets/scss/tufte.scss
+++ b/assets/scss/tufte.scss
@@ -140,7 +140,8 @@ section {
 
 p,
 ol,
-ul {
+ul,
+dl {
     font-size: 1.4rem;
 }
 
@@ -196,7 +197,8 @@ blockquote footer {
 }
 
 ol,
-ul {
+ul,
+dl {
     width: 45%;
     -webkit-padding-start: 5%;
     -webkit-padding-end: 5%;
@@ -206,8 +208,35 @@ li  ul {
     width: 100%;
 }
 
-li {
+li,
+dt, dd {
     padding: 0.5rem 0;
+}
+
+dl {
+    display: grid;
+    gap: 0 1rem;
+}
+
+dt {
+    font-weight: 700;
+    grid-column: 1;
+}
+
+dd {
+    margin-bottom: 0;
+    margin-left: 1rem;
+}
+
+@media (min-width: 760px) {
+  dl {
+    grid-template-columns: fit-content(50%) auto;
+  }
+
+  dd {
+    grid-column: 2;
+    margin-left: 0;
+  }
 }
 
 figure {
@@ -323,7 +352,9 @@ div.table-wrapper {
     footer {
         width: 90%;
     }
-    ul {
+    ul,
+    ol,
+    dl {
         width: 85%;
     }
     figure {
