--- a/layouts/book/volumes.html
+++ b/layouts/book/volumes.html
@@ -14,6 +14,19 @@
 {{ end }}
 
 <section class="list-page">
+
+<!-- preambles -->
+
+<ul>
+{{ range .Pages.ByTitle }}
+{{ if .IsPage }}
+<li><a href="{{ .RelPermalink }}">{{ .Title }}{{- if .Draft -}} :: Draft {{- end -}}</a></li>
+{{ end }}
+{{ end }}
+</ul>
+
+<!-- sub categories -->
+
 <ul>
 {{ range .Pages.ByTitle }}
 {{ if .IsSection }}
