add lang option for side/marginnote

--- a/layouts/shortcodes/marginnote.html
+++ b/layouts/shortcodes/marginnote.html
@@ -7,6 +7,6 @@
 {{- $ind := .Get "ind" | default .Site.Params.marginNoteInd -}}
 <label for="marginnote-{{ $label }}" class="margin-toggle marginnote-ind">{{ $ind }}</label>
 <input type="checkbox" id="marginnote-{{ $label }}" class="margin-toggle"/>
-<span class="marginnote">
+<span class="marginnote"{{ with .Get "lang" }} lang="{{ . }}"{{ end }}>
 {{ .Inner | markdownify}}
 </span>
