--- a/layouts/shortcodes/sidenote.html
+++ b/layouts/shortcodes/sidenote.html
@@ -6,6 +6,6 @@
 {{- $label := $.Page.Scratch.Get "sidenoteCounter" -}}
 <label for="sidenote-{{ $label }}" class="margin-toggle sidenote-number">({{ $label }})</label>
 <input type="checkbox" id="sidenote-{{ $label }}" class="margin-toggle"/>
-<span class="sidenote">
+<span class="sidenote"{{ with .Get "lang" }} lang="{{ . }}"{{ end }}>
 <span class="sidenote-number">({{ $label }})</span>{{ .Inner | markdownify }}
 </span>
