--- a/layouts/book/all.html
+++ b/layouts/book/all.html
@@ -2,15 +2,14 @@
 <div id="layout">
 <article>
 
-{{ partial "brand.html" . }}
-{{ partial "content.header.html" . }}
+{{- partial "content.header.html" . -}}
 
 <!-- https://discourse.gohugo.io/t/how-to-build-one-collection-for-all-nested-sections/27950/5 -->
-{{ with .Content }}
+{{- with .Content -}}
 <section>
 {{ . }}
 </section>
-{{ end }}
+{{- end -}}
 
 <section class="list-page">
 <!-- preambles -->
@@ -41,6 +40,7 @@
 </section>
 
 {{ partial "footer.html" . }}
+{{ partial "nav.html" . }}
 
 </article>
 </div>
