--- a/layouts/book/volumes.html
+++ b/layouts/book/volumes.html
@@ -3,8 +3,6 @@
 <div id="layout">
 <article>
 
-{{ partial "brand.html" . }}
-
 {{ partial "content.header.html" . }}
 
 {{ with .Content }}
@@ -37,6 +35,7 @@
 </section>
 
 {{ partial "footer.html" . }}
+{{ partial "nav.html" . }}
 
 </article>
 </div>
