--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -18,6 +18,11 @@
   outline: 5px auto -webkit-focus-ring-color;
 }
 
+::selection {
+    color: #fffff8;
+    background-color: #404040;
+}
+
 a.heading-anchor {
     display: none;
     visibility: collapse;
