add css for mark

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -56,6 +56,10 @@ kbd {
   padding-left: 2px;
 }
 
+mark {
+    background: #f0d9bb;
+}
+
 /* ------------------------------------------------------------------------ */
 /* Styling for listing pages. */
 /* ------------------------------------------------------------------------ */
