--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
   {{ if .IsNode }}
   <a href="{{ .Permalink }}">{{ .Title}}</a>
   {{ else }}
-  <a href="{{ .RelPermalink }}">{{ .Title }}{{ if .Draft }} :: Draft {{end}}</a>
+  <a href="{{ .RelPermalink }}">{{ .Title }}{{ if .Draft }}&nbsp;:: Draft{{end}}</a>
   {{ end }}
   </h2>
 
