--- a/layouts/partials/content.header.html
+++ b/layouts/partials/content.header.html
@@ -1,6 +1,6 @@
 <section>
 <h1 class="content-title">
-{{- .Title -}}{{- if .Draft -}} :: Draft {{- end -}}
+{{- .Title -}}{{- if .Draft -}}&nbsp;:: Draft{{- end -}}
 </h1>
 {{- if .Params.subtitle -}}
 <p class=subtitle>{{ .Params.subtitle }}</p>
