--- a/assets/scss/tufte.scss
+++ b/assets/scss/tufte.scss
@@ -54,6 +54,10 @@
     font-style: normal;
 }
 
+$serif-fonts: et-book, "Noto Serif SC", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif, "Noto Emoji";
+$sans-fonts: "Gill Sans", "Gill Sans MT", Calibri, sans-serif, "Noto Emoji";
+$mono-fonts: Consolas, "Liberation Mono", Menlo, Courier, monospace, "Noto Emoji";
+
 /* Tufte CSS styles */
 html {
     font-size: 15px;
@@ -63,36 +67,36 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding-left: 12.5%;
-    font-family: et-book, "Noto Serif SC", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif, "Noto Emoji";
+    font-family: $serif-fonts;
     background-color: #fffff8;
     color: #111;
     max-width: 1400px;
 }
 
-h1 {
+h1, h2, h3 {
     font-weight: 400;
+    line-height: 1;
+}
+
+h1 {
     margin-top: 4rem;
     margin-bottom: 1.5rem;
     font-size: 3.2rem;
-    line-height: 1;
+}
+
+h2, h3 {
+    font-style: italic;
+    margin-bottom: 0;
 }
 
 h2 {
-    font-style: italic;
-    font-weight: 400;
     margin-top: 2.1rem;
-    margin-bottom: 0;
     font-size: 2.2rem;
-    line-height: 1;
 }
 
 h3 {
-    font-style: italic;
-    font-weight: 400;
     font-size: 1.7rem;
     margin-top: 2rem;
-    margin-bottom: 0;
-    line-height: 1;
 }
 
 .author, .date {
@@ -350,14 +354,14 @@ div.table-wrapper {
 }
 
 .sans {
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif, "Noto Emoji";
+    font-family: $sans-fonts;
     letter-spacing: 0.03em;
 }
 
 code,
 .code,
 kbd {
-    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace, "Noto Emoji";
+    font-family: $mono-fonts;
     font-size: 1.125rem;
     line-height: 1.42;
 }
