--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -27,4 +27,8 @@
 {{ $htstyle := resources.Get "scss/hugo-tufte.scss"| resources.ExecuteAsTemplate "main.scss" .  | resources.ToCSS $htoptions }}
 <link rel="stylesheet" href="{{ $htstyle.Permalink | relURL }}">
 
+{{ $ht_o_options := (dict "targetPath" "/css/hugo-tufte-options.min.css" "outputStyle" "compressed" "enableSourceMap" true) }}
+{{ $ht_o_style := resources.Get "scss/hugo-tufte-options.scss"| resources.ExecuteAsTemplate "main.scss" .  | resources.ToCSS $ht_o_options }}
+<link rel="stylesheet" href="{{ $ht_o_style.Permalink | relURL }}">
+
 <link rel="stylesheet" href="{{ "/css/hugo-tufte-override.css" | relURL }}">
